--- a/default.conf
+++ b/default.conf
@@ -2,14 +2,24 @@ server {
     listen       80;
     server_name  _;
 
+    location /.well-known/ {
+        root /var/www/proxy2.spender.me;
+    }
+
     location / {
         proxy_set_header X-Real-IP $remote_addr;
 
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-NginX-Proxy true;
+
         proxy_pass https://spender.me;
         proxy_redirect off;
+
+	# HTTP 1.1 support
+	proxy_http_version 1.1;
+	proxy_set_header Connection "";
     }
 
 }
